[package]
name = "rust-web-api"
version = "0.1.0"
authors = ["narumincho <narumincho.starfy@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
web-sys = { version = "0.3.51", features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    "console",
] }

[workspace]

members = [
    "start",
]